All models adjusted r^2 checked, structure slightly shifted

--- a/Data Exploration.Rmd
+++ b/Data Exploration.Rmd
@@ -366,19 +366,35 @@ pred_lasso = lm(survival_months ~ age+race_as_factor_bc_data_var_1+race_as_facto
 summary(pred_lasso)
 ```
 
+## The model we selected...
 
-## Model Validation & Performance Evaluation
+Choosing btw forward selection and stepwise selection based on adjusted R^2
 
-First, we will conduct a train-test split on bc_data:
+Diagnostics for the two candidates:
+```{r}
+par(mfrow = c(2,2))
+plot(forward_pred)
+```
+
+```{r}
+par(mfrow = c(2,2))
+plot(both_pred)
+```
+
+Still choose forward selection one, because less predictors used is better based on principle of parsimony.
+
+## Chosen Model's Validation & Performance Evaluation
+
+First, we will conduct a train-test split on bc_data_dummy:
 ```{r}
 # train test split used for training and testing
 # Set seed for reproducibility
 set.seed(123)
 
 # Split data into training and testing sets (80% train, 20% test)
-train_indices <- sample(seq_len(nrow(bc_data)), 0.8 * nrow(bc_data))  # 80% train indices
-train_data <- bc_data[train_indices, ]  # Training data
-test_data <- bc_data[-train_indices, ]  # Testing data
+train_indices <- sample(seq_len(nrow(bc_data_dummy)), 0.8 * nrow(bc_data_dummy))  # 80% train indices
+train_data <- bc_data_dummy[train_indices, ]  # Training data
+test_data <- bc_data_dummy[-train_indices, ]  # Testing data
 
 # Separate predictor variables (train_x, test_x) and target variable (train_y, test_y)
 train_x <- train_data[, -which(names(train_data) == "survival_months")]
@@ -388,7 +404,7 @@ test_x <- test_data[, -which(names(test_data) == "survival_months")]
 test_y <- test_data$survival_months
 ```
 
-### Test MLR w/ all predictors
+### Test the Forward selection model
 ```{r}
 # Fit the MLR model on the training data
 mult.fit <- lm(survival_months ~ ., data = train_data)
@@ -426,135 +442,6 @@ print(cv_results)
 ```
 The RMSE and R-squared appear similar.
 
-
-### Test MLR with reduced multicollinearity
-```{r}
-# Fit the MLR model on the training data
-reduced_train = train_data |> select(-t_stage, n_stage, x6th_stage)
-reduced_test = test_data |> select(-t_stage, n_stage, x6th_stage)
-  
-reduced_fit <- lm(survival_months ~ ., data = reduced_train)
-
-# Predict on the test data
-predicted_test <- predict(reduced_fit, newdata = reduced_test)
-
-# Calculate evaluation metrics (e.g., Mean Squared Error, R-squared)
-rmse <- sqrt(mean((predicted_test - reduced_test$survival_months)^2))
-rsquared <- summary(reduced_fit)$r.squared
-
-rsquared
-```
-
-```{r}
-mlr_summary_reduced <- summary(reduced_model)
-adjusted_r_squared_mlr_reduced <- mlr_summary_reduced$adj.r.squared
-adjusted_r_squared_mlr_reduced
-```
-
-We will also cross-validate MLR to double-check:
-```{r}
-# Define the number of folds for cross-validation
-num_folds <- 5  # You can adjust the number of folds as needed
-
-# Define the control parameters for cross-validation
-ctrl <- trainControl(method = "cv", number = num_folds)
-
-# Train the MLR model with k-fold cross-validation
-reduced_fit_cv <- train(survival_months ~ ., data = reduced_df, method = "lm", trControl = ctrl)
-
-# Get cross-validated performance metrics
-cv_results_reduced <- reduced_fit_cv$results
-print(cv_results_reduced)
-```
-
-The RMSE and R-squared appear similar to that before cross-validation.
-
-### Test Stepwise Regression Model
-```{r}
-# Create a named vector of coefficients
-coefficients <- c(
-  `(Intercept)` = 39.290750,
-  a_stage = 3.426435, 
-  estrogen_status = 3.744369, 
-  status = 29.713666
-)
-
-# Extract the predictor names from the coefficients
-selected_predictors <- names(coefficients)[-1]  # Exclude '(Intercept)'
-
-# Construct the formula for the model
-selected_formula <- reformulate(selected_predictors, response = "survival_months")
-
-# Fit the MLR model using the selected predictors and coefficients
-selected_model <- lm(selected_formula, data = train_data)  # Replace 'your_data' with your dataset
-
-# View the summary of the model
-summary(selected_model)
-```
-
-```{r}
-# Predict on the test data
-predicted_test <- predict(selected_model, newdata = test_data)
-
-# Calculate evaluation metrics: RMSE, R-squared, and adjusted R-squared
-actual_values <- test_data$survival_months  # Actual values from test data
-
-# RMSE
-rmse <- sqrt(mean((predicted_test - test_y)^2))
-
-# R-squared
-rsquared <- summary(selected_model)$r.squared
-
-# Adjusted R-squared
-num_predictors <- length(coef(selected_model)) - 1  # Number of predictors (excluding intercept)
-n <- length(test_y)  # Total number of samples
-adjusted_r_squared <- 1 - ((1 - rsquared) * (n - 1) / (n - num_predictors - 1))
-
-cat("RMSE:", rmse, "\n")
-cat("R-squared:", rsquared, "\n")
-cat("Adjusted R-squared:", adjusted_r_squared, "\n")
-```
-
-### Test LASSO
-```{r}
-# Train LASSO model using the best lambda obtained from cross-validation
-lasso_model <- glmnet(train_x, train_y, alpha = 1, lambda = 8)
-```
-
-```{r}
-# Predict using the validation data
-predicted_val <- predict(lasso_model, newx = as.matrix(test_x))
-
-# Calculate evaluation metrics (e.g., Mean Squared Error and R-squared)
-rmse <- sqrt(mean((predicted_val - test_y)^2))
-rsquared <- 1 - (sum((test_y - predicted_val)^2) / sum((test_y - mean(test_y))^2))
-
-rmse
-```
-
-```{r}
-# Calculate the residual sum of squares (RSS)
-rss <- sum((predicted_val - test_y)^2)
-
-# Get the number of predictors used in the LASSO model
-num_predictors <- sum(coef(lasso_model) != 0) - 1  # Exclude intercept (-1)
-
-# Get the total number of samples
-n <- length(test_y)
-
-# Calculate adjusted R-squared for LASSO model
-r_squared <- 1 - (rss / ((n - num_predictors - 1) * var(test_y)))
-adjusted_r_squared_lasso <- 1 - ((1 - r_squared) * (n - 1) / (n - num_predictors - 1))
-```
-
-```{r}
-adjusted_r_squared_lasso
-```
-
-## The model we selected...
-
-xxxx
-The reasons behind: The crude, all-in-one MLR performs better than linear regression with LASSO regularization in terms of adjusted R-squared. all-predictor one compared with the reduced-predictor one?
 
 ## Additional: Logistic Regression
 ```{r}
@@ -626,9 +513,28 @@ print(conf_matrix)
 ```
 
 
-## Additional: Compare performance for White vs Black groups
+## Additional/Optional: Compare performance for White vs Black groups
 And can you improve the prediction performance gap btw these two groups for your model?
+
+Use the forward model for white group only, then use the forward model for other group only
 ```{r}
 
+```
+
+Compare performance
+```{r}
+
+```
+
+How to improve? - weighting the race variable?
+```{r}
+# Assign different weights based on the racial group
+#bc_data$weight <- ifelse(bc_data$race == "White", 1, 2)  # Assign higher weight to "Black" or other minorities
+
+# Define your linear regression model using lm()
+#model <- lm(target_var ~ ., data = bc_data, weights = bc_data$weight)
+
+# Fit the model
+#fit <- summary(model)
 ```
 
