--- a/Data Exploration.Rmd
+++ b/Data Exploration.Rmd
@@ -199,8 +199,14 @@ bc_data_dummy <- bc_data_dummy[, !names(bc_data_dummy) %in% factor_vars] |> jani
 head(bc_data_dummy)
 ```
 
+Exclude status in bc_data_dummy for MLR continuous fit:
 ```{r}
-mult.fit = lm(survival_months ~ ., data = bc_data_dummy)
+bc_data_dummy_new = bc_data_dummy |> select(-status_as_factor_bc_data_var_0, status_as_factor_bc_data_var_1)
+```
+
+
+```{r}
+mult.fit = lm(survival_months ~ . - differentiate - status, data = bc_data)
 
 #logit_fit=glm(status ~ .-survival_months,family="binomial",data=bc_data)
 #summary(logit_fit)
@@ -226,7 +232,7 @@ Since lambda approaches 1 and its 95% CI lies close to 1, it suggests that we do
 
 Based on Cook's distance, we will investigate the three influential points:
 ```{r}
-view_influential = bc_data_dummy[c(1843, 1553, 1534), ]
+view_influential = bc_data[c(278, 1553, 1584), ]
 view_influential
 ```
 
@@ -252,8 +258,7 @@ high_cor_var_pairs = data.frame(
   Correlation = cor_matrix[high_cor_pairs]
 )
 
-high_cor_var_pairs |> 
-  knitr::kable(digits=4)
+high_cor_var_pairs
 ```
 
 Remove the one with lower correlation with outcome in every pair:
@@ -297,7 +302,7 @@ Normality fit looks better at the left tail.
 ### Stepwise
 Forward
 ```{r}
-intercept_only = lm(survival_months ~ 1, data = bc_data_dummy)
+intercept_only = lm(survival_months ~ 1, data = bc_data)
 step(intercept_only, direction = "forward", scope = formula(mult.fit), trace = FALSE)
 #step_forward = MASS::stepAIC(mult.fit, direction = "forward", trace = FALSE) |>
   #broom::tidy()
@@ -537,23 +542,48 @@ And can you improve the prediction performance gap btw these two groups for your
 
 Use the forward model for white group only, then use the forward model for other group only
 ```{r}
-
+white = bc_data_dummy |> filter(race_as_factor_bc_data_var_2==1)
+minor = bc_data_dummy |> filter(race_as_factor_bc_data_var_2==0)
 ```
 
-Compare performance
 ```{r}
+forward_white = lm(survival_months ~ a_stage_as_factor_bc_data_var_1 + estrogen_status_as_factor_bc_data_var_1 + status_as_factor_bc_data_var_1 + x6th_stage_as_factor_bc_data_var_4 + tumor_size + differentiate_as_factor_bc_data_var_4 +  race_as_factor_bc_data_var_1, 
+                  data = white)
 
+forward_minor = lm(survival_months ~ a_stage_as_factor_bc_data_var_1 + estrogen_status_as_factor_bc_data_var_1 + status_as_factor_bc_data_var_1 + x6th_stage_as_factor_bc_data_var_4 + tumor_size + differentiate_as_factor_bc_data_var_4 +  race_as_factor_bc_data_var_1, 
+                  data = minor)
 ```
+
+```{r}
+summary(forward_white)
+summary(forward_minor)
+```
+
+Compare performance: Based on adjusted R-squared, the forward selection model predicts better for white patients than for black and other patients.
 
 How to improve? - weighting the race variable?
 ```{r}
-# Assign different weights based on the racial group
-#bc_data$weight <- ifelse(bc_data$race == "White", 1, 2)  # Assign higher weight to "Black" or other minorities
+# Calculate the number of observations in each racial group
+n_white <- nrow(white)
+n_minor <- nrow(minor)
 
-# Define your linear regression model using lm()
-#model <- lm(target_var ~ ., data = bc_data, weights = bc_data$weight)
+# Calculate weights based on the number of observations in each group
+weight_white <- n_minor / n_white
+weight_minor <- n_white / n_minor
 
-# Fit the model
-#fit <- summary(model)
+# Calculate the geometric mean of the weights
+geometric_mean_weight <- sqrt(weight_white * weight_minor)
+
+# Fit weighted linear regression models with balanced weights
+weighted_forward_white_balanced <- lm(survival_months ~ a_stage_as_factor_bc_data_var_1 + estrogen_status_as_factor_bc_data_var_1 + status_as_factor_bc_data_var_1 + x6th_stage_as_factor_bc_data_var_4 + tumor_size + differentiate_as_factor_bc_data_var_4 + race_as_factor_bc_data_var_1,
+                                      data = white, weights = rep(geometric_mean_weight, n_white))
+
+weighted_forward_minor_balanced <- lm(survival_months ~ a_stage_as_factor_bc_data_var_1 + estrogen_status_as_factor_bc_data_var_1 + status_as_factor_bc_data_var_1 + x6th_stage_as_factor_bc_data_var_4 + tumor_size + differentiate_as_factor_bc_data_var_4 + race_as_factor_bc_data_var_1,
+                                      data = minor, weights = rep(geometric_mean_weight, n_minor))
+```
+
+```{r}
+summary(weighted_forward_white_balanced)
+summary(weighted_forward_minor_balanced)
 ```
 
